hphp/hack/test/typecheck/reactive/test_mutable_return10.php.exp
File "test_mutable_return10.php", line 13, characters 19-19:
The method `f` is not compatible with the overridden method (Typing[4341])
  File "test_mutable_return10.php", line 6, characters 19-19:
  This is marked `<<__MutableReturn>>`.
  File "test_mutable_return10.php", line 13, characters 19-19:
  This is not marked `<<__MutableReturn>>`.
